@@ -1,6 +1,8 @@
 package recources;
 
 import enums.FriendshipStatus;
+import messaging.NotificationEvent;
+import messaging.NotificationProducer;
 import models.FriendshipRequests;
 import models.User;
 import service.FriendshipService;
@@ -13,6 +15,7 @@ import javax.ws.rs.core.*;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Path("/friendships")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -24,6 +27,10 @@ public class FriendshipResource {
 
     @Inject
     private UserService userService;
+    
+    @Inject
+    private NotificationProducer notificationProducer;
+
 
     @POST
     @Path("/{requesterId}/request/{receiverId}")
@@ -50,9 +57,20 @@ public class FriendshipResource {
                            .build();
         }
 
+     //  Send Notification
+        String message = requester.getFirstName() + " " + requester.getLastName() + " sent you a friend request.";
+        NotificationEvent event = new NotificationEvent(
+            requester.getUserId(),
+            receiver.getUserId(),
+            "FRIEND_REQUEST_RECEIVED",
+            message
+        );
+        notificationProducer.sendNotification(event);
+
         return Response.status(Response.Status.CREATED)
                        .entity("Friend request sent successfully.")
                        .build();
+        
     }
 
 
@@ -140,7 +158,7 @@ public class FriendshipResource {
             map.put("bio", friend.getBio());
             map.put("birthdate", friend.getBirthdate());
             return map;
-        }).toList();
+        }).collect(Collectors.toList());
 
         return Response.ok(friendInfos).build();
     }
